fix(back-to-top): fixed alignment and added to addons

--- a/packages/addons-website/scss/components/_website-back-to-top-btn.scss
+++ b/packages/addons-website/scss/components/_website-back-to-top-btn.scss
@@ -1,4 +1,6 @@
-.back-to-top {
+@import '../prefix';
+
+.#{$prefix}--back-to-top {
   width: rem(48px);
   height: rem(48px);
   border-radius: rem(24px);
